--- a/09_clases_de_django_http_servidor.ipynb
+++ b/09_clases_de_django_http_servidor.ipynb
@@ -32,7 +32,7 @@
     "Este capítulo está dividido en dos notebooks:\n",
     "\n",
     "* La parte teórica y del servidor, corresponde al presente documento.\n",
-    "* La parte del cliente, corresponde a la notebook [```11_clases_de_django_http_cliente.ipynb```](11_clases_de_django_http_cliente.ipynb).\n",
+    "* La parte del cliente, corresponde a la notebook [```10_clases_de_django_http_cliente.ipynb```](10_clases_de_django_http_cliente.ipynb).\n",
     "\n",
     "La notebook del cliente consume los recursos que el servidor que esta notebook despliega, por lo que es necesario que el servidor de Django de esta notebook esté en ejecución cuando la notebook del cliente se esté ejecutando."
    ]
@@ -45,7 +45,7 @@
     "\n",
     "Este paquete cuenta con herramientas diseñadas para gestionar las peticiones y repuestas más comunes de *HTTP*, incluyendo algunos mensajes de estado.\n",
     "\n",
-    "En el capítulo [```07_peticiones_y_respuestas.ipynb```](07_peticiones_y_respuestas.ipynb) se describió someramente lo siguiente:\n",
+    "En el capítulo [```06_peticiones_y_respuestas.ipynb```](06_peticiones_y_respuestas.ipynb) se describió brevemente:\n",
     "\n",
     "* El modo en el que los datos de las peticiones (requests) enviadas por un cliente son recibidas por el servidor de *Django* y contenidas en objetos instanciados de la clase ```django.http.HttpRequest```.\n",
     "* El modo en el que una función de vista  permite enviar una respuestas (responses) a un cliente por medio de una instancia de la clase ```django.http.HttpResponse```. \n",
@@ -234,7 +234,7 @@
    "source": [
     "## Ejemplo ilustrativo.\n",
     "\n",
-    "El archivo ```src/10/urls.py``` contiene el siguiente código:\n",
+    "El archivo ```src/09/urls.py``` contiene el siguiente código:\n",
     "\n",
     "\n",
     "``` python\n",
@@ -267,7 +267,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/10/urls.py tutorial/main/urls.py "
+    "!cp src/09/urls.py tutorial/main/urls.py "
    ]
   },
   {
@@ -283,7 +283,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\10\\urls.py tutorial\\main\\urls.py "
+    "!copy src\\09\\urls.py tutorial\\main\\urls.py "
    ]
   },
   {
@@ -299,7 +299,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo ```src/10/views.py``` contiene el siguiente código:\n",
+    "El archivo ```src/09/views.py``` contiene el siguiente código:\n",
     "\n",
     "\n",
     "``` python\n",
@@ -360,7 +360,7 @@
    },
    "outputs": [],
    "source": [
-    "!cp src/10/views.py tutorial/main/views.py "
+    "!cp src/09/views.py tutorial/main/views.py "
    ]
   },
   {
@@ -376,7 +376,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\10\\views.py tutorial\\main\\views.py "
+    "!copy src\\09\\views.py tutorial\\main\\views.py "
    ]
   },
   {
@@ -477,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
