--- a/11_configuracion_de_bases_de_datos.ipynb
+++ b/11_configuracion_de_bases_de_datos.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "### Configuración de ```settings.DATABASES```.\n",
     "\n",
-    "El script ```src/12/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```.\n",
+    "El script ```src/11/settings.py``` contiene la siguiente configuración que define una conexión al gestor de bases de datos *MySQL* con clave ```'default'```.\n",
     "\n",
     "``` python\n",
     "\n",
@@ -257,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituirá al archivo ```tutorial/tutorial/settings.py``` con el archivo ```src/12/settings.py```."
+    "* La siguiente celda sustituirá al archivo ```tutorial/tutorial/settings.py``` con el archivo ```src/11/settings.py```."
    ]
   },
   {
@@ -273,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/12/settings.py tutorial/tutorial/settings.py"
+    "!cp src/11/settings.py tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -289,7 +289,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\12\\settings.py tutorial\\tutorial\\settings.py"
+    "!copy src\\11\\settings.py tutorial\\tutorial\\settings.py"
    ]
   },
   {
@@ -326,7 +326,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "* Se hará la sincronización de la configuración con identificador *default*."
+    "* Se hará la sincronización de la configuración con identificador ```default```."
    ]
   },
   {
@@ -490,7 +490,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
