--- a/12_modelos_de_django.ipynb
+++ b/12_modelos_de_django.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Los archivos *models.py*.\n",
+    "## Los archivos ```models.py```.\n",
     "\n",
     "Estos archivos son los indicados por *Django* para la definición de modelos."
    ]
@@ -137,7 +137,7 @@
    "source": [
     "## Definición de un modelo ilustrativo.\n",
     "\n",
-    "El archivo ```src/13/models.py``` contiene el siguiente código, el cual define a la clase ```Alumno```, la cual es subclase de ```django.db.models.Model```.\n",
+    "El archivo ```src/12/models.py``` contiene el siguiente código, el cual define a la clase ```Alumno```, la cual es subclase de ```django.db.models.Model```.\n",
     "\n",
     "La clase ```Alumno``` cuenta con los atributos:\n",
     "\n",
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sutituirá al script ```tutorial/main/models.py``` con el script ```src/13/models.py```."
+    "* La siguiente celda sutituirá al script ```tutorial/main/models.py``` con el script ```src/12/models.py```."
    ]
   },
   {
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/13/models.py tutorial/main/models.py"
+    "!cp src/12/models.py tutorial/main/models.py"
    ]
   },
   {
@@ -204,7 +204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\13\\models.py tutorial\\main\\models.py"
+    "!copy src\\12\\models.py tutorial\\main\\models.py"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "metadata": {},
    "source": [
     "**Ejemplo:**\n",
-    "El script *src/13/settings.py* incluye la cadena ```'main'``` en la lista ```INSTALLED_APPS``` de la siguiente forma:\n",
+    "El script ```src/12/settings.py``` incluye la cadena ```'main'``` en la lista ```INSTALLED_APPS``` de la siguiente forma:\n",
     "\n",
     "``` python\n",
     "INSTALLED_APPS = [\n",
@@ -256,7 +256,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* La siguiente celda sustituye al archivo *tutorial/tutorial/settings.py* con el archivo *src/13/settings.py*."
+    "* La siguiente celda sustituye al archivo ```tutorial/tutorial/settings.py``` con el archivo ```src/12/settings.py```."
    ]
   },
   {
@@ -272,7 +272,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cp src/13/settings.py tutorial/tutorial/settings.py"
+    "!cp src/12/settings.py tutorial/tutorial/settings.py"
    ]
   },
   {
@@ -288,7 +288,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!copy src\\13\\settings.py tutorial\\tutorial\\settings.py"
+    "!copy src\\12\\settings.py tutorial\\tutorial\\settings.py"
    ]
   },
   {
@@ -472,7 +472,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
