--- a/08_json_con_django.ipynb
+++ b/08_json_con_django.ipynb
@@ -354,7 +354,7 @@
    "source": [
     "**Ejemplo:**\n",
     "\n",
-    "El archivo ```src/09/urls.py``` incluye una ruta apuntando a ```main/path```, ligándola a la función de vista ```views.respuesta_json()```.\n",
+    "El archivo ```src/08/urls.py``` incluye una ruta apuntando a ```main/path```, ligándola a la función de vista ```views.respuesta_json()```.\n",
     "\n",
     "``` python\n",
     "from django.urls import path, re_path \n",
@@ -373,7 +373,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al archivo ```tutorial/main/urls.py* con el archivo *src/09/urls.py*."
+    "* A continuación se sustituirá al archivo ```tutorial/main/urls.py``` con el archivo ```src/08/urls.py```."
    ]
   },
   {
@@ -389,7 +389,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/09/urls.py tutorial/main/urls.py"
+    "%cp src/08/urls.py tutorial/main/urls.py"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%copy src\\09\\urls.py tutorial\\main\\urls.py"
+    "%copy src\\08\\urls.py tutorial\\main\\urls.py"
    ]
   },
   {
@@ -421,7 +421,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "El archivo ```src/09/views.py``` incluye a la función de vista ```respuesta_json()``` con el siguiente código:\n",
+    "El archivo ```src/08/views.py``` incluye a la función de vista ```respuesta_json()``` con el siguiente código:\n",
     "\n",
     "``` python\n",
     "def respuesta_json(request):    \n",
@@ -435,7 +435,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* A continuación se sustituirá al archivo ```tutorial/main/views.py``` con el archivo ```src/09/views.py```."
+    "* A continuación se sustituirá al archivo ```tutorial/main/views.py``` con el archivo ```src/08/views.py```."
    ]
   },
   {
@@ -451,7 +451,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cp src/09/views.py tutorial/main/views.py"
+    "%cp src/08/views.py tutorial/main/views.py"
    ]
   },
   {
@@ -467,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%copy src\\09\\views.py tutorial\\main\\views.py"
+    "%copy src\\08\\views.py tutorial\\main\\views.py"
    ]
   },
   {
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
