--- a/01_introduccion_a_django.ipynb
+++ b/01_introduccion_a_django.ipynb
@@ -103,7 +103,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "!pip install django"
@@ -182,6 +184,15 @@
    "outputs": [],
    "source": [
     "!django-admin help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!django-admin help startproject"
    ]
   },
   {
@@ -497,7 +508,7 @@
    },
    "outputs": [],
    "source": [
-    "!./manage.py runserver 0.0.0.0:5000"
+    "%run manage.py runserver 0.0.0.0:5000"
    ]
   },
   {
