--- a/02_el_protocolo_http.ipynb
+++ b/02_el_protocolo_http.ipynb
@@ -50,7 +50,7 @@
     "El protocolo *HTTP* permite localizar los diversos recursos disponbles en la web mediante los Localizadores Uniformes de Recursos (*URL* por sus siglas en inglés). La estructura de una *URL* es la siguiente:\n",
     "\n",
     "```\n",
-    "http://<subdominio>.<dominio>:<puerto>/<ruta absoluta>?<parámetros>\n",
+    "http://<subdominio>.<dominio>:<puerto>/<ruta relativa>?<parámetros>\n",
     "```\n",
     "\n",
     "*HTTP* utiliza por defecto el puerto ```80```.\n",
@@ -140,7 +140,7 @@
    "source": [
     "## El paquete ```requests```.\n",
     "\n",
-    "El paquete [```requests```](http://docs.python-requests.org)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo *HTTP*, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
+    "El paquete [```requests```](https://requests.kennethreitz.org/en/master/)  permite hacer peticiones mediante funciones que emulan los métodos del protocolo *HTTP*, regresando un objeto de Python que contiene los mensajes y datos de la respuesta del servidor a modo de atributos.\n",
     "\n",
     "```\n",
     "requests.<metodo>('<URL>, <argumentos>')\n",
@@ -614,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
