--- a/05_urls_y_funciones_de_vista.ipynb
+++ b/05_urls_y_funciones_de_vista.ipynb
@@ -202,7 +202,7 @@
     "Donde:\n",
     "\n",
     "* ```<patrón>``` corresponde a un patrón de *URL*.\n",
-    "* ```<función>``` corresponde una función. \n",
+    "* ```<función>``` corresponde a una función o  a un método que será invocado. \n",
     "* ```<kwargs>``` corresponde a argumentos ```clave=valor```.\n",
     "* ```<nombre>``` es el nombre que se le dará a esta relación (opcional).\n"
    ]
