--- a/06_peticiones_y_respuestas.ipynb
+++ b/06_peticiones_y_respuestas.ipynb
@@ -181,16 +181,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        1 archivo(s) copiado(s).\n"
+     ]
+    }
+   ],
    "source": [
     "!copy src\\06\\views.py tutorial\\main\\views.py"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "scrolled": true
    },
@@ -208,9 +216,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\josech\\Dropbox\\Documentos\\py201\\tutorial\n"
+     ]
+    }
+   ],
    "source": [
     "%cd tutorial"
    ]
