--- a/07_gestion_de_urls.ipynb
+++ b/07_gestion_de_urls.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "### Definición de nombre y tipo de cada segmento.\n",
     "\n",
-    "Cada segmento define una sintaxis ```tipo:nombre``` encerrado entre los signos de \"menor que\" ```<``` y \"mayor que\" ```>```.  "
+    "Es posible asignarle un nombre a cada segmento mediante la sintaxis ```tipo:nombre``` encerrado entre los signos de \"menor que\" ```<``` y \"mayor que\" ```>```.  "
    ]
   },
   {
@@ -126,7 +126,7 @@
     " 'main/<int:codigo>/<string:color>/<int:cantidad>'\n",
     "```\n",
     "* Se obtendrían:\n",
-    "    * El objeto con nombre ```codigo```, de tipo ```ìnt``` y con valor de ```53```.\n",
+    "    * El objeto con nombre ```codigo```, de tipo ```int``` y con valor de ```53```.\n",
     "    * El objeto con nombre ```color```, de tipo ```string``` y con valor de ```'azul'```.\n",
     "    * El objeto con nombre ```cantidad```, de tipo ```ìnt``` y con valor de ```1```.   \n",
     "    \n",
