--- a/08_json_con_django.ipynb
+++ b/08_json_con_django.ipynb
@@ -114,6 +114,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "estudiante_json"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -242,7 +251,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%cat alumno.json"
+    "!cat alumno.json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!type alumno.json"
    ]
   },
   {
