--- a/09_clases_de_django_http_servidor.ipynb
+++ b/09_clases_de_django_http_servidor.ipynb
@@ -66,14 +66,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Métodos *django.http.HttpRequest*.\n",
+    "### Métodos de ´´´django.http.HttpRequest´´´.\n",
     "\n",
     "#### Métodos informativos.\n",
     "\n",
     "* ```get_host()``` regresa la *URL* del servidor.\n",
     "* ```get_port()``` regresa el puerto de conexión al servidor.\n",
     "* ```get_full_path()``` regresa la URL incluyendo los argumentos.\n",
-    "* ```get_full_path_info()``` es similar a ```get_full_path()```, pero utiliznado el atributo ```path_info```.\n",
+    "* ```get_full_path_info()``` es similar a ```get_full_path()```, pero utilizando el atributo ```path_info```.\n",
     "* ```build_absolute_uri()``` regresa la *URL* absoluta.\n",
     "* ```is_secure()``` indica si la conexión es segura.\n",
     "\n",
