--- a/10_clases_de_django_http_cliente.ipynb
+++ b/10_clases_de_django_http_cliente.ipynb
@@ -102,6 +102,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "respuesta_post.json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "respuesta_post.url"
    ]
   },
