--- a/14_shell_de_django_y_filtros_de_modelos.ipynb
+++ b/14_shell_de_django_y_filtros_de_modelos.ipynb
@@ -8,25 +8,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## El Shell de *Django*."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**ADVERTENCIA:**\n",
+    "\n",
+    "Para poder realizar exitosamente los ejercicios de esta notebook, es necesario haber seguido al pie de la letra y en orden sucesivo las instrucciones de todas las notebooks previas."
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "*Django* cuenta con una funcionalidad que permite desplegar un shell baasado en *IPython*, el cual permite interactuar con el entorno de un proyecto.\n",
+    "\n",
+    "De este modo, el shell de *Django* permite interactuar con los modelos definidos en dicho proyecto.\n",
+    "\n",
+    "Sólo es necesario ejecutar el siguiente comando desde una terminal,asegurándose de estar en el directorio del proyecto.\n",
+    "\n",
+    "``` bash\n",
+    "python manage.py shell\n",
+    "```\n",
+    "\n",
+    "Dicho comando ejecutará un shell, el cual estará configurado com las variables de entorno definidas en el archivo ```settings.py``` del proyecto."
+   ]
   },
   {
    "cell_type": "code",
