--- a/04_mvc_mvt_y_servicios_web.ipynb
+++ b/04_mvc_mvt_y_servicios_web.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "Este patrón de diseño de aplicaciones web consiste en separar los datos a los que accede una aplicación de las interfaces de dicha aplicación.\n",
     "\n",
-    "El patrón *MCV* se volvió muy popular en el desarrolo de aplicaciones web particularmente con su implementación por medio de [*Ruby on Rails*](https://rubyonrails.org/).\n",
+    "El patrón [*MCV*](https://es.wikipedia.org/wiki/Modelo%E2%80%93vista%E2%80%93controlador) se volvió muy popular en el desarrolo de aplicaciones web particularmente con su implementación por medio de [*Ruby on Rails*](https://rubyonrails.org/).\n",
     "\n",
     "![MVC](imagenes/MVC.gif)"
    ]
@@ -146,7 +146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
